@@ -1,3 +1,4 @@
+	* fix to use proxy settings when adding .torrent file from URL
 	* fix resume file issue related to daylight savings time on windows
 	* improve error checking in lazy_bdecode
 
